Exclusão de Imagem Mulher no Comput

--- a/index.html
+++ b/index.html
@@ -17,16 +17,12 @@
         <li><a href=”#”>Iniciativas</a></li>
         </ul>
     </nav> 
-        
+    <!-- https://kahoot.it/join/collaboration -->
     <main class="card">
-
-        <!-- <figure>
-            <img src="./img/Logotipo aya.png" alt="Logo Aya">
-        </figure>
-  
+            
  
-        <p class="title"> Nucleo de Tecnologia e Empreendedorismo</p>
-        <button class="instagram"><a href="https://www.instagram.com/ayatech.oficial/">Instagram</a></button> -->
+        <!-- <p class="title"> Nucleo de Tecnologia e Empreendedorismo</p>
+        <button class="instagram"><a href="https://www.instagram.com/ayatech.oficial/">Instagram</a></button>  -->
         <article class="estamosemconstrucao">
             <h1>Estamos Em Construção !</h1></article>
     </main> 
